--- a/src/main/resources/com/example/lab5st200524536/MobilePhone-view.fxml
+++ b/src/main/resources/com/example/lab5st200524536/MobilePhone-view.fxml
@@ -8,11 +8,11 @@
 
 <AnchorPane fx:id="PhoneView" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.lab5st200524536.MobilePhoneViewController">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="183.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="yphoneview" fitHeight="150.0" fitWidth="204.0" layoutX="225.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Images/VivoV23.jpg" />
+            <Image url="@Images/phones/apple-14-blue-pos1.png" />
          </image>
       </ImageView>
-      <Label layoutX="269.0" layoutY="79.0" text="ViVoV23" />
+      <Label fx:id="Iphone" layoutX="269.0" layoutY="79.0" text="IPhone" />
    </children>
 </AnchorPane>
